change: adjust the statistic view ui

--- a/app/src/main/res/layout/statistics_card_spinner_drop_down_item.xml
+++ b/app/src/main/res/layout/statistics_card_spinner_drop_down_item.xml
@@ -8,4 +8,5 @@
     android:singleLine="true"
     android:textColor="@android:color/black"
     android:textSize="18sp"
-    tools:text="hello" />
+    tools:text="hello"
+    android:gravity="end"/>
