--- a/app/src/main/res/layout/statistics_frag.xml
+++ b/app/src/main/res/layout/statistics_frag.xml
@@ -37,7 +37,9 @@
         android:id="@+id/statistics"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/cardview_margin"
+        android:layout_marginStart="@dimen/cardview_margin"
+        android:layout_marginEnd="@dimen/cardview_margin"
+        android:layout_marginTop="15dp"
         android:visibility="gone"
         app:cardBackgroundColor="@color/colorPrimary" />
 
