--- a/app/src/main/res/layout/layout_statistic_chart.xml
+++ b/app/src/main/res/layout/layout_statistic_chart.xml
@@ -56,5 +56,11 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@id/title" />
+
+    <com.empty.jinux.simplediary.ui.main.statistics.view.ScoreChart
+        android:id="@+id/scoreChart"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_below="@id/statisticChat"/>
 </RelativeLayout>
 
