--- a/app/src/main/res/layout/layout_statistic_chart.xml
+++ b/app/src/main/res/layout/layout_statistic_chart.xml
@@ -20,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/title"
+        android:layout_marginEnd="5dp"
         android:layout_marginStart="30dp"
         android:layout_toStartOf="@id/slash"
         android:background="@null"
