--- a/app/src/main/res/layout/layout_statistic_chart.xml
+++ b/app/src/main/res/layout/layout_statistic_chart.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/title"
@@ -24,9 +24,9 @@
         android:layout_marginStart="30dp"
         android:layout_toStartOf="@id/slash"
         android:background="@null"
-        tools:text="Words"
         android:textColor="@color/colorAccent"
-        android:textSize="@dimen/card_view_button_text_size" />
+        android:textSize="@dimen/card_view_button_text_size"
+        tools:text="Words" />
 
     <TextView
         android:id="@+id/slash"
@@ -47,9 +47,9 @@
         android:layout_marginEnd="12dp"
         android:layout_marginStart="5dp"
         android:background="@null"
-        tools:text="Day"
         android:textColor="@color/colorAccent"
-        android:textSize="@dimen/card_view_button_text_size" />
+        android:textSize="@dimen/card_view_button_text_size"
+        tools:text="Day" />
 
 
     <com.github.mikephil.charting.charts.BarChart
@@ -62,6 +62,6 @@
         android:id="@+id/scoreChart"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_below="@id/statisticChat"/>
+        android:layout_below="@id/statisticChat" />
 </RelativeLayout>
 
