--- a/app/src/main/res/layout/layout_punchcard.xml
+++ b/app/src/main/res/layout/layout_punchcard.xml
@@ -18,7 +18,8 @@
         android:id="@+id/punchRecycleView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="15dp"
+        android:paddingEnd="10dp"/>
 
     <View
         android:layout_width="match_parent"
