--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -5,8 +5,8 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="80dp"
-        android:layout_height="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:inputType="numberPassword" />
+        android:inputType="numberPassword"/>
 </FrameLayout>
