--- a/app/src/main/res/menu/drawer_actions.xml
+++ b/app/src/main/res/menu/drawer_actions.xml
@@ -23,35 +23,37 @@
             android:id="@+id/list_navigation_menu_item"
             android:icon="@drawable/ic_list"
             android:title="@string/list_title" />
+
         <item
             android:id="@+id/statistics_navigation_menu_item"
             android:icon="@drawable/ic_statistics"
             android:title="@string/statistics_title" />
+
     </group>
 
-    <group
-        android:id="@+id/group2"
-        android:checkableBehavior="none"
-        android:menuCategory="container">
-        <item
-            android:id="@+id/rate_navigation_menu_item"
-            android:icon="@drawable/ic_star"
-            android:title="@string/rate_title" />
-        <item
-            android:id="@+id/feedback_navigation_menu_item"
-            android:icon="@drawable/ic_feedback"
-            android:title="@string/feedback_title" />
-        <item
-            android:id="@+id/translate_navigation_menu_item"
-            android:icon="@drawable/ic_translate"
-            android:title="@string/translate_title" />
-        <item
-            android:id="@+id/share_navigation_menu_item"
-            android:icon="@drawable/ic_share"
-            android:title="@string/share_title" />
-        <item
-            android:id="@+id/about_navigation_menu_item"
-            android:icon="@drawable/ic_statistics"
-            android:title="@string/about_title" />
-    </group>
+    <item
+        android:id="@+id/rate_navigation_menu_item"
+        android:icon="@drawable/ic_star"
+        android:title="@string/rate_title" />
+    <item
+        android:id="@+id/feedback_navigation_menu_item"
+        android:icon="@drawable/ic_feedback"
+        android:title="@string/feedback_title" />
+    <item
+        android:id="@+id/translate_navigation_menu_item"
+        android:icon="@drawable/ic_translate"
+        android:title="@string/translate_title" />
+    <item
+        android:id="@+id/share_navigation_menu_item"
+        android:icon="@drawable/ic_share"
+        android:title="@string/share_title" />
+
+    <item
+        android:id="@+id/settings_navigation_menu_item"
+        android:icon="@drawable/ic_settings_black_24dp"
+        android:title="@string/statistics_title" />
+    <item
+        android:id="@+id/about_navigation_menu_item"
+        android:icon="@drawable/ic_statistics"
+        android:title="@string/about_title" />
 </menu>
