--- a/app/src/main/res/menu/drawer_actions.xml
+++ b/app/src/main/res/menu/drawer_actions.xml
@@ -51,7 +51,7 @@
     <item
         android:id="@+id/settings_navigation_menu_item"
         android:icon="@drawable/ic_settings_black_24dp"
-        android:title="@string/statistics_title" />
+        android:title="@string/settings_title" />
     <item
         android:id="@+id/about_navigation_menu_item"
         android:icon="@drawable/ic_statistics"
