--- a/app/src/main/res/layout/dialog_app_lock_set_password.xml
+++ b/app/src/main/res/layout/dialog_app_lock_set_password.xml
@@ -2,7 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="10dp">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/password_set_dialog_title"
+        android:textSize="17sp"
+        android:textColor="@android:color/black"
+        android:layout_marginBottom="10dp"/>
 
     <EditText
         android:id="@+id/newPassword"
@@ -10,7 +19,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/app_lock_new_password_hint"
         android:inputType="numberPassword"
-        android:maxLength="6"/>
+        android:maxLength="6" />
 
     <EditText
         android:id="@+id/passwordConfirm"
@@ -18,22 +27,26 @@
         android:layout_height="wrap_content"
         android:hint="@string/app_lock_password_confirm_hint"
         android:inputType="numberPassword"
-        android:maxLength="6"/>
+        android:maxLength="6" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <Button
             android:id="@+id/positiveButton"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/ok"/>
+            android:layout_marginEnd="20dp"
+            android:layout_weight="1"
+            android:text="@string/ok" />
 
         <Button
             android:id="@+id/negativeButton"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/cancel"/>
+            android:layout_weight="1"
+            android:text="@string/cancel" />
     </LinearLayout>
 </LinearLayout>
