--- a/app/src/main/res/values/constents.xml
+++ b/app/src/main/res/values/constents.xml
@@ -5,5 +5,6 @@
     <string name="feedbackURL" formatted="false" translatable="false">mailto:jinguol999@163.com?subject=Feedback%20about%20Diary%20Book</string>
     <string name="translateURL" translatable="false">https://crowdin.com/project/diary-book</string>
     <string name="slash" translatable="false">/</string>
+    <string name="app_version_fmt" translatable="false">v%1$s</string>
 
 </resources>
