--- a/app/src/main/res/layout/dialog_app_lock_set_password.xml
+++ b/app/src/main/res/layout/dialog_app_lock_set_password.xml
@@ -8,10 +8,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:text="@string/password_set_dialog_title"
-        android:textSize="17sp"
         android:textColor="@android:color/black"
-        android:layout_marginBottom="10dp"/>
+        android:textSize="17sp" />
 
     <EditText
         android:id="@+id/newPassword"
@@ -40,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:layout_weight="1"
+            android:enabled="false"
             android:text="@string/ok" />
 
         <Button
