change: set LayoutManager in layout res

--- a/app/src/main/res/layout/diaries_frag.xml
+++ b/app/src/main/res/layout/diaries_frag.xml
@@ -36,7 +36,9 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/diaryRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                app:reverseLayout="false"/>
         </LinearLayout>
 
         <LinearLayout
