--- a/app/src/main/res/drawable/edit_text_cursor.xml
+++ b/app/src/main/res/drawable/edit_text_cursor.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <size android:width="1.8sp" android:height="10sp"/>
-    <solid android:color="@android:color/black"/>
-</shape>
+<clip xmlns:android="http://schemas.android.com/apk/res/android"
+    android:gravity="top"
+    android:clipOrientation="vertical"
+    android:drawable="@drawable/edit_cursor_shape" />
