--- a/app/src/main/res/layout/taskdetail_frag.xml
+++ b/app/src/main/res/layout/taskdetail_frag.xml
@@ -18,10 +18,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:orientation="vertical">
 
     <ScrollView
+        android:id="@+id/scrollContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
@@ -31,29 +31,33 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <EditText
+            <com.empty.jinux.simplediary.ui.diarydetail.fragment.MEditText
                 android:id="@+id/diaryContent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/common_margin"
-                android:background="#0ff"
                 android:gravity="top|start"
                 android:imeOptions="flagNoExtractUi"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:background="@android:color/transparent"
                 android:lineSpacingExtra="@dimen/edit_text_space_extra"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:textAppearance="@style/DiaryContentText"
-                android:textCursorDrawable="@drawable/edit_text_cursor"
+                android:textCursorDrawable="@drawable/edit_cursor_shape"
                 tools:text="Medium Text" />
+
             <Space
-                android:layout_width="0dp"
-                android:layout_height="300dp"/>
+                android:id="@+id/bottomSpace"
+                android:layout_width="100dp"
+                android:layout_height="200dp"
+                android:background="#f0f"/>
         </LinearLayout>
 
     </ScrollView>
 
 
-    <include layout="@layout/layout_diary_detail_edit_tool"/>
+    <include
+        layout="@layout/layout_diary_detail_edit_tool"
+        android:visibility="gone" />
 
 
 </LinearLayout>
