--- a/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
+++ b/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/pencil"
+    android:id="@+id/editTools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/diary_detail_edit_tool_height"
     android:background="@color/colorPrimary"
     android:gravity="top"
+    android:layout_gravity="bottom"
     android:orientation="horizontal">
 
     <View
