--- a/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
+++ b/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
@@ -1,45 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/editTools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/diary_detail_edit_tool_height"
-    android:background="@color/colorPrimary"
-    android:gravity="top"
-    android:layout_gravity="bottom"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_gravity="bottom">
 
-    <View
-        android:id="@+id/toolInputMethod"
-        android:layout_width="@dimen/diary_detail_edit_tool_item_size"
-        android:layout_height="@dimen/diary_detail_edit_tool_item_size"
-        android:layout_marginStart="@dimen/diary_detail_edit_tool_item_space"
-        android:background="@drawable/ic_keyboard"
-        android:layout_marginTop="10dp"/>
+    <android.support.design.widget.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/editTools"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/diary_detail_edit_tool_height"
+        android:background="@color/colorPrimary"
+        android:gravity="top"
+        android:orientation="horizontal">
 
-    <View
-        android:id="@+id/toolLocation"
-        android:layout_width="@dimen/diary_detail_edit_tool_item_size"
-        android:layout_height="@dimen/diary_detail_edit_tool_item_size"
-        android:layout_marginStart="@dimen/diary_detail_edit_tool_item_space"
-        android:background="@drawable/ic_location"
+        <android.support.design.widget.TabItem
+            android:id="@+id/toolInputMethod"
+            android:layout_width="@dimen/diary_detail_edit_tool_item_size"
+            android:layout_height="@dimen/diary_detail_edit_tool_item_size"
+            android:layout_marginStart="@dimen/diary_detail_edit_tool_item_space"
+            android:layout_marginTop="10dp"
+            android:text="键盘" />
 
-        android:layout_marginTop="10dp"/>
+        <android.support.design.widget.TabItem
+            android:id="@+id/toolLocation"
+            android:layout_width="@dimen/diary_detail_edit_tool_item_size"
+            android:layout_height="@dimen/diary_detail_edit_tool_item_size"
+            android:layout_marginStart="@dimen/diary_detail_edit_tool_item_space"
+            android:layout_marginTop="10dp"
 
-    <Spinner
-        android:id="@+id/toolWeather"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/diary_detail_edit_tool_item_space"
-        android:background="@null"
-        android:layout_marginTop="5dp"/>
+            android:text="位置" />
 
-    <Spinner
-        android:id="@+id/toolEmotion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/diary_detail_edit_tool_item_space"
-        android:layout_marginTop="5dp"
-        android:background="@null" />
+        <android.support.design.widget.TabItem
+            android:id="@+id/toolWeather"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/diary_detail_edit_tool_item_space"
+            android:layout_marginTop="5dp"
+            android:text="状态" />
 
 
+    </android.support.design.widget.TabLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/toolArea"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_gravity="bottom"/>
 </LinearLayout>
