change: move location, weather and emotion into same tool page

--- a/app/src/main/res/layout/taskdetail_frag.xml
+++ b/app/src/main/res/layout/taskdetail_frag.xml
@@ -48,7 +48,7 @@
                 tools:text="Medium Text" />
 
             <Space
-                android:id="@+id/bottomArea"
+                android:id="@+id/bottomSpace"
                 android:layout_width="match_parent"
                 android:layout_height="300dp" />
         </LinearLayout>
