--- a/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
+++ b/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/editTabContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom"
@@ -11,10 +12,9 @@
         android:background="@color/colorPrimary">
 
         <android.support.design.widget.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/editTools"
+            android:id="@+id/editToolsTab"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/diary_detail_edit_tool_height"
-            android:gravity="top"
             android:orientation="horizontal" />
     </FrameLayout>
 
