--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -33,5 +33,6 @@
     <dimen name="card_view_title_text_size">25sp</dimen>
     <dimen name="card_view_button_text_size">15sp</dimen>
     <dimen name="text_size">15sp</dimen>
+    <dimen name="edit_status_icon_size">50dp</dimen>
 
 </resources>
