--- a/app/src/main/res/layout/fragment_edit_status.xml
+++ b/app/src/main/res/layout/fragment_edit_status.xml
@@ -4,14 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/location" />
+        android:layout_marginBottom="3dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/location"
+        android:textSize="16sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,9 +45,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/weather" />
+        android:layout_marginBottom="3dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/weather"
+
+        android:textSize="16sp" />
 
     <RadioGroup
         android:id="@+id/weatherRadioGroup"
@@ -55,9 +60,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
-        android:text="@string/emotion" />
+        android:layout_marginBottom="3dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/emotion"
+        android:textSize="16sp" />
 
     <RadioGroup
         android:id="@+id/emotionRadioGroup"
