--- a/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
+++ b/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
@@ -22,5 +22,6 @@
         android:id="@+id/toolArea"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_gravity="bottom" />
+        android:layout_gravity="bottom"
+        android:visibility="gone" />
 </LinearLayout>
