--- a/app/src/main/res/layout/fragment_edit_status.xml
+++ b/app/src/main/res/layout/fragment_edit_status.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorPrimary"
     android:orientation="vertical"
-    android:paddingStart="10dp"
-    android:paddingEnd="10dp">
+    android:paddingEnd="10dp"
+    android:paddingStart="10dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -23,19 +24,19 @@
         android:orientation="horizontal">
 
         <TextView
-
+            android:id="@+id/address"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="test location" />
+            android:ellipsize="middle"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:scrollHorizontally="true"
+            tools:text="test location very loooooooooooooooooooooooooooooooooooooooog"
+            android:singleLine="true"/>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            app:srcCompat="@drawable/ic_close_black_24dp" />
-
-        <ImageView
+            android:id="@+id/edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
