--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -43,6 +43,23 @@
                     android:padding="15dp" />
 
             </android.support.v7.widget.CardView>
+
+            <ImageView
+                android:id="@+id/fingerPrintIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_edit"
+                android:layout_marginTop="50dp"
+                android:layout_gravity="center_horizontal"
+                android:visibility="invisible"/>
+
+            <TextView
+                android:id="@+id/fingerPrintMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center_horizontal"
+                android:visibility="invisible"/>
         </LinearLayout>
     </FrameLayout>
 
