change: optimize the fingerpint experience

--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="#b7bab7">
 
@@ -46,12 +47,12 @@
 
             <ImageView
                 android:id="@+id/fingerPrintIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_edit"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:srcCompat="@drawable/ic_fingerprint_black_24dp"
                 android:layout_marginTop="50dp"
                 android:layout_gravity="center_horizontal"
-                android:visibility="invisible"/>
+                android:visibility="visible"/>
 
             <TextView
                 android:id="@+id/fingerPrintMessage"
@@ -59,7 +60,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_gravity="center_horizontal"
-                android:visibility="invisible"/>
+                android:visibility="visible"
+                tools:text="hello fingerprint"/>
         </LinearLayout>
     </FrameLayout>
 
