--- a/app/src/main/res/layout/fragment_edit_status.xml
+++ b/app/src/main/res/layout/fragment_edit_status.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/colorPrimary"
+    android:background="@color/edit_tools_panel_bg"
     android:orientation="vertical"
     android:paddingEnd="10dp"
     android:paddingStart="10dp">
@@ -12,10 +12,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="3dp"
-        android:layout_marginTop="12dp"
         android:text="@string/location"
-        android:textSize="16sp" />
+        style="@style/edit_info_title_style"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,6 +31,8 @@
             android:focusableInTouchMode="true"
             android:scrollHorizontally="true"
             tools:text="test location very loooooooooooooooooooooooooooooooooooooooog"
+            android:textColor="@color/white"
+            android:textSize="15sp"
             android:singleLine="true"/>
 
         <ImageView
@@ -40,17 +40,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
+            android:contentDescription=""
             app:srcCompat="@drawable/ic_edit" />
     </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="3dp"
-        android:layout_marginTop="12dp"
         android:text="@string/weather"
-
-        android:textSize="16sp" />
+        style="@style/edit_info_title_style"/>
 
     <RadioGroup
         android:id="@+id/weatherRadioGroup"
@@ -61,10 +59,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="3dp"
-        android:layout_marginTop="12dp"
         android:text="@string/emotion"
-        android:textSize="16sp" />
+        style="@style/edit_info_title_style"/>
 
     <RadioGroup
         android:id="@+id/emotionRadioGroup"
