--- a/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
+++ b/app/src/main/res/layout/layout_diary_detail_edit_tool.xml
@@ -9,13 +9,14 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary">
+        android:background="@color/transparent">
 
         <android.support.design.widget.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/editToolsTab"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/diary_detail_edit_tool_height"
-            android:orientation="horizontal" />
+            android:orientation="horizontal"
+            android:background="@null"/>
     </FrameLayout>
 
     <android.support.v4.view.ViewPager
@@ -23,5 +24,6 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_gravity="bottom"
+        android:background="@null"
         android:visibility="gone" />
 </LinearLayout>
