--- a/app/src/main/res/drawable/ic_drawer_top_bg.xml
+++ b/app/src/main/res/drawable/ic_drawer_top_bg.xml
@@ -1,6 +1,6 @@
 <vector android:height="24dp" android:viewportHeight="137.58333"
     android:viewportWidth="194.73334" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillAlpha="1" android:fillColor="#6699ff"
+    <path android:fillAlpha="1" android:fillColor="@color/colorPrimaryLighter"
         android:fillType="evenOdd"
         android:pathData="M0.12,0.363l194.604,0l0,137.583l-194.604,0z"
         android:strokeAlpha="1" android:strokeColor="#00000000"
