--- a/app/src/main/res/layout/diaries_frag.xml
+++ b/app/src/main/res/layout/diaries_frag.xml
@@ -19,7 +19,7 @@
     android:id="@+id/refresh_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@color/colorBg">
 
     <RelativeLayout
         android:id="@+id/diariesContainer"
@@ -38,7 +38,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                app:reverseLayout="false"/>
+                app:reverseLayout="false"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="10dp"/>
         </LinearLayout>
 
         <LinearLayout
