--- a/app/src/main/res/layout/recycler_view_item_category.xml
+++ b/app/src/main/res/layout/recycler_view_item_category.xml
@@ -1,45 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="40dp"
+    android:background="@drawable/bg_category_head">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginBottom="7dp"
-        android:background="@color/time_line_color">
+    <TextView
+        android:id="@+id/weekth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:paddingStart="16dp"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        tools:text="hahhaa" />
 
-        <TextView
-            android:id="@+id/weekth"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:paddingStart="6dp"
-            android:textColor="@android:color/black"
-            android:textSize="16sp"
-            tools:text="hahhaa" />
-
-        <TextView
-            android:id="@+id/year"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="6dp"
-            android:text="2018"
-            android:textColor="@android:color/black"
-            android:textSize="13sp" />
+    <TextView
+        android:id="@+id/year"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="16dp"
+        android:text="2018"
+        android:textColor="@color/black"
+        android:textSize="13sp" />
 
 
-    </RelativeLayout>
-
-    <View
-        android:layout_width="14dp"
-        android:layout_height="8dp"
-        android:layout_gravity="bottom"
-        android:layout_marginStart="@dimen/swipe_item_menu_item_width"
-        android:background="@drawable/ic_simple_diary_icon_time_line"
-        android:layout_marginBottom="-1dp"/>
-</FrameLayout>
+</RelativeLayout>
