--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="transparent">#fa0048cd</color>
     <color name="colorBg">#EBEBEB</color>
     <color name="black">#353535</color>
+    <color name="colorEditHighlight">#66000000</color>
     <drawable name="touchFeedback">@color/colorPrimaryLighter</drawable>
     <drawable name="item_normal">@color/white</drawable>
 </resources>
