--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,5 +34,6 @@
     <dimen name="card_view_button_text_size">15sp</dimen>
     <dimen name="text_size">15sp</dimen>
     <dimen name="edit_status_icon_size">50dp</dimen>
+    <dimen name="editor_paragraph_end">16dp</dimen>
 
 </resources>
