--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="colorAccent">#D50000</color>
     <color name="icon_color_primary">#bbffffff</color>
 
-    <color name="white">#FFFFFF</color>
+    <color name="white">#f1ecb4</color>
     <color name="green">#00ff00</color>
     <color name="edit_tools_panel_bg">#f50048cd</color>
     <color name="transparent">#fa0048cd</color>
