chagne: change the white color to yellow color

--- a/app/src/main/res/drawable/bg_category_head.xml
+++ b/app/src/main/res/drawable/bg_category_head.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
 
     <corners android:topLeftRadius="5dp" android:topRightRadius="5dp"/>
-    <solid android:color="@color/white"/>
+    <solid android:color="@color/paper_yellow"/>
 
 </shape>
