--- a/app/src/main/res/layout/fragment_edit_status.xml
+++ b/app/src/main/res/layout/fragment_edit_status.xml
@@ -31,7 +31,7 @@
             android:focusableInTouchMode="true"
             android:scrollHorizontally="true"
             tools:text="test location very loooooooooooooooooooooooooooooooooooooooog"
-            android:textColor="@color/white"
+            android:textColor="@color/paper_yellow"
             android:textSize="15sp"
             android:singleLine="true"/>
 
