--- a/app/src/main/res/layout/recycler_view_item_category_end.xml
+++ b/app/src/main/res/layout/recycler_view_item_category_end.xml
@@ -10,7 +10,7 @@
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="@color/white"
+        app:cardBackgroundColor="@color/paper_yellow"
         android:layout_marginBottom="7dp"
         android:layout_marginTop="-5dp"
         app:cardCornerRadius="5dp"
