change: move margin to item from recycleview so the fading can expand screen wide

--- a/app/src/main/res/layout/recycle_item_diary.xml
+++ b/app/src/main/res/layout/recycle_item_diary.xml
@@ -20,6 +20,8 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/diary_list_item_height"
     android:background="@drawable/touch_feedback"
+    android:layout_marginStart="@dimen/diaries_list_recycle_view_margin_horizontal"
+    android:layout_marginEnd="@dimen/diaries_list_recycle_view_margin_horizontal"
     android:orientation="horizontal">
 
     <TextView
