--- a/app/src/main/res/layout/diaries_frag.xml
+++ b/app/src/main/res/layout/diaries_frag.xml
@@ -37,9 +37,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                app:reverseLayout="false"
-                android:layout_marginStart="@dimen/diaries_list_recycle_view_margin_horizontal"
-                android:layout_marginEnd="@dimen/diaries_list_recycle_view_margin_horizontal" />
+                app:reverseLayout="false" />
         </LinearLayout>
 
         <LinearLayout
