--- a/app/src/main/res/layout/recycler_view_item_category_end.xml
+++ b/app/src/main/res/layout/recycler_view_item_category_end.xml
@@ -2,17 +2,18 @@
 
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginEnd="@dimen/diaries_list_recycle_view_margin_horizontal"
+    android:layout_marginStart="@dimen/diaries_list_recycle_view_margin_horizontal"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="@color/paper_yellow"
         android:layout_marginBottom="7dp"
         android:layout_marginTop="-5dp"
-        app:cardCornerRadius="5dp"
-        />
+        app:cardBackgroundColor="@color/paper_yellow"
+        app:cardCornerRadius="5dp" />
 </LinearLayout>
