--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -33,5 +33,6 @@
     <dimen name="editor_paragraph_end">16dp</dimen>
     <dimen name="diaries_list_recycle_view_margin_horizontal">10dp</dimen>
     <dimen name="radio_group_selected_circle_size">35dp</dimen>
+    <dimen name="statusbar_height">26dp</dimen>
 
 </resources>
