--- a/app/src/main/res/values/constents.xml
+++ b/app/src/main/res/values/constents.xml
@@ -7,5 +7,9 @@
     <string name="slash" translatable="false">/</string>
     <string name="app_version_fmt" translatable="false">v%1$s</string>
     <string name="pref_lock_enable" translatable="false">pref_app_lock_enable</string>
+    <string name="pref_back_to_local" translatable="false" >pref_back_to_local</string>
+    <string name="pref_restore_from_local" translatable="false" >pref_restore_from_local</string>
+    <string name="pref_back_to_google_driver" translatable="false" >pref_back_to_google_driver</string>
+    <string name="pref_restore_from_google_driver" translatable="false" >pref_restore_from_google_driver</string>
 
 </resources>
