bugfix: can't scroll up when cursor get below the keyboard

--- a/app/src/main/res/layout/fragment_taskdetail.xml
+++ b/app/src/main/res/layout/fragment_taskdetail.xml
@@ -49,7 +49,8 @@
                 android:textCursorDrawable="@drawable/edit_cursor_shape"
                 tools:text="Medium Text"
                 android:hint="@string/editor_hint"
-                android:visibility="visible"/>
+                android:visibility="visible"
+                android:layout_marginBottom="@dimen/detail_diary_editor_bottom"/>
 
             <Space
                 android:id="@+id/bottomSpace"
