--- a/baselibrary/src/main/res/layout/activity_abs_about.xml
+++ b/baselibrary/src/main/res/layout/activity_abs_about.xml
@@ -22,7 +22,9 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:layout_collapseMode="parallax"
+                app:layout_collapseParallaxMultiplier="0.5">
 
                 <ImageView
                     android:id="@+id/appIcon"
