--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,4 +38,5 @@
     <dimen name="detail_diary_editor_bottom">15dp</dimen>
     <dimen name="about_page_slogin_padding_top">10dp</dimen>
     <dimen name="good_view_check_size">40dp</dimen>
+    <dimen name="bar_item_value_textview_height">20dp</dimen>
 </resources>
